<resources>
    <string name="app_name">LearnWithFun - FunOFunTimes</string>
    <string name="activityname">ActivityName</string>
    <string name="SHARED_PREF_NAME">com.funofuntime.activites.prefs</string>
    <string name="ACTIVITIES">activities</string>
    <string name="welcome_to_learn_with_fun">Welcome to Learn with Fun!</string>
    <string name="_0">0</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="_4">+4</string>
    <string name="_5">+5</string>
    <string name="_6">+6</string>
    <string name="_7">+7</string>
    <string name="_9">+9</string>
    <string name="_8">+8</string>
    <string name="_10">+10</string>
    <string name="minus1">-1</string>
    <string name="minus2">-2</string>
    <string name="minus3">-3</string>
    <string name="minus4">-4</string>
    <string name="minus5">-5</string>
    <string name="minus6">-6</string>
    <string name="minus7">-7</string>
    <string name="minus8">-8</string>
    <string name="minus9">-9</string>
    <string name="minus10">-10</string>
    <string name="_100">+100</string>
    <string name="_1000">+1000</string>
    <string name="reset">RESET</string>
    <string name="_m100">-100</string>
    <string name="_m1000">-1000</string>
    <string name="sub">Sub</string>
    <string name="plus">Add</string>
    <string name="get_a_number">GET A NUMBER</string>
    <string name="set_limit">Set Limit</string>
    <string name="learn_add_sub"><![CDATA[Learn ADD & SUB]]></string>
    <string name="home">Home</string>
    <string name="monday">Monday</string>
    <string name="practice_numbers">Practice Numbers</string>
    <string name="learn_numbers">Learn Numbers</string>
    <string name="set">SET</string>
    <string name="L100">100</string>
    <string name="activitybutton">activityButton</string>
    <string name="title_activity_games_acticity">GamesActicity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="_1tictactoebtn">1</string>
    <string name="_2tictactoebtn">2</string>
    <string name="_3tictactoebtn">3</string>
    <string name="_4tictactoebtn">4</string>
    <string name="_5tictactoebtn">5</string>
    <string name="_6tictactoebtn">6</string>
    <string name="_7tictactoebtn">7</string>
    <string name="_8tictactoebtn">8</string>
    <string name="_9tictactoebtn">9</string>
    <string name="play_tic_tac_toe">play Tic-Tac-Toe</string>
    <string name="player_1">Player 1:</string>
    <string name="symbol">symbol</string>
    <string name="player_2">Player 2:</string>
    <string name="start">START</string>
    <string name="play_again">Play Again</string>
    <string name="apple">🍎</string>
    <string name="player_2_name">player 2 Name</string>
    <string name="pear">🍐</string>
    <string name="player_1_name">player 1 Name</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="numTextView">TextView</string>
    <string name="multiplication_table">Multiplication Table</string>
    <string name="numtextview">NumTextView</string>
    <string name="back_to_table">Back To Table</string>
    <string name="a_to_z">A to Z</string>
    <string name="a_z_and_a_z">A-Z and a-z</string>
    <string name="a_z">a-z</string>
    <string name="upper_a_z">A-Z</string>
    <string name="a">A</string>
    <string name="next_letter">Next Letter</string>
</resources>