<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:text="@string/home"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="#FF5722"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RESET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/numTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/plus1"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="1"
                    android:text="@string/_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus2"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="2"
                    android:text="@string/_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus3"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="3"
                    android:text="@string/_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus4"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="4"
                    android:text="@string/_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus5"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="5"
                    android:text="@string/_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/plus6"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="6"
                    android:text="@string/_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus7"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="7"
                    android:text="@string/_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus8"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="8"
                    android:text="@string/_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus9"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="9"
                    android:text="@string/_9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/plus10"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="10"
                    android:text="@string/_10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="#8BC34A"
                    app:backgroundTintMode="add" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/minus1"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-1"
                    android:text="@string/minus1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus2"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-2"
                    android:text="@string/minus2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus3"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-3"
                    android:text="@string/minus3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus4"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-4"
                    android:text="@string/minus4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus5"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-5"
                    android:text="@string/minus5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/minus6"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-6"
                    android:text="@string/minus6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus7"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-7"
                    android:text="@string/minus7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus8"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-8"
                    android:text="@string/minus8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus9"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-9"
                    android:text="@string/minus9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/minus10"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:tag="-10"
                    android:text="@string/minus10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:backgroundTintMode="add" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/numTable" />

    <Button
        android:id="@+id/plus100"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:tag="100"
        android:text="@string/_100"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/plus1000"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:tag="1000"
        android:text="@string/_1000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus100"
        app:layout_constraintStart_toEndOf="@id/plus100" />

    <Button
        android:id="@+id/minus100"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"

        android:layout_weight="1"
        android:tag="-100"
        android:text="@string/_m100"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus1000"
        app:layout_constraintStart_toEndOf="@+id/plus1000" />

    <Button
        android:id="@+id/minus1000"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:tag="-1000"
        android:text="@string/_m1000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/minus100"
        app:layout_constraintStart_toEndOf="@+id/minus100" />

    <EditText
        android:id="@+id/NumEditTextNumber"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:hint="@string/L100"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/L100"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus100" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/minus"
        android:textSize="12sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/addButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_weight="1"
        android:text="@string/plus"
        android:textSize="12sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="@+id/NumEditTextNumber"
        app:layout_constraintStart_toEndOf="@+id/NumEditTextNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>