<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AlphabetsActivity">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:text="@string/home"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/upperAZButton"
        app:layout_constraintEnd_toStartOf="@+id/upperAZButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upperAZButton"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upper_a_z"
        app:layout_constraintBottom_toBottomOf="@+id/lowerAZButton"
        app:layout_constraintEnd_toStartOf="@+id/lowerAZButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lowerAZButton"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a_z"
        app:layout_constraintBottom_toBottomOf="@+id/bothAZButton"
        app:layout_constraintEnd_toStartOf="@+id/bothAZButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upperAZButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bothAZButton"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a_z_and_a_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lowerAZButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alphabetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lowerAZButton">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/alphaTextView"
        android:layout_width="148dp"
        android:layout_height="159dp"
        android:layout_marginStart="200dp"
        android:gravity="center_horizontal"
        android:text="@string/a"
        android:textColor="#2196F3"
        android:textSize="110sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alphabetRecyclerView" />

    <Button
        android:id="@+id/getLetterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/next_letter"
        app:backgroundTint="#9C27B0"
        app:layout_constraintEnd_toStartOf="@+id/alphaTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alphaTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>